@@ -1,5 +1,12 @@
-[2015-08-21]
+[2015-08-01]
 Version 0.7.1 UNRELASED
+
+- Internal changes:
+
+  * Improving C++11 compatibilty mode:
+
+    * Convert std::auto_ptr (deprecated in C++11) to unique_ptr
+
 
 [2015-07-25]
 Version 0.7
